# tourguide

./: .env.example  .gitignore  .mcp.json  ANALYSIS_MODE.md  CLAUDE.md  CSV_COLUMN_GUIDE.md  LICENSE  LOCAL_SETUP.md  MCP_FOR_ANY_APP.md  README.md  WORKSPACE.md  check_screenshots.py  debug_query.py  pixi.toml  test_screenshot.py
.github/: dependabot.yml
.github/workflows/: pages.yml
analysis/: README.md  pyproject.toml
analysis/recipes/: contact_sites.py  measure_objects.py
hf-space/: Dockerfile  README.md  app.py  browser_store.py  requirements.txt  sandbox.py
mcp/: README.md  pyproject.toml
mcp/src/tourguide_mcp/: __init__.py  client.py  launcher.py  ng_viewer.py  schemas.py  server.py  session.py  tools.py
organelle_data/: organelles.db
python/: README.md  pyproject.toml
python/examples/: measure_segmentation.py
python/src/tourguide_client/: __init__.py  schemas.py  session.py
server/: apptainer_sandbox.py  main.py  narrator.py  ng.py  organelle_db.py  query_agent.py  stream.py
tests/: test_analysis_mode.py
web/: app.js  index.html  style.css
web-app/: README.md  index.html  package-lock.json  package.json  sim_browser.mjs  vercel.json  vite.config.ts
web-app/bridge/: README.md  server.mjs  state_store.mjs  test_client.mjs
web-app/public/: _headers  _redirects  catalog.json  sw.js
web-app/public/datasets/: demo.yaml  jrc_hela-2.yaml
web-app/public/datasets/demo/: endoplasmic_reticulum.csv  generate.mjs  mitochondria.csv  nucleus.csv
web-app/scripts/: update-neuroglancer.sh  workspace.mjs
web-app/src/: agent.ts  analysis.ts  analysis_ui.ts  analysis_worker.ts  browser.ts  bundled_viewer.ts  catalog.ts  custom_analysis_ui.ts  db.ts  descriptor.ts  detect.ts  download_ui.ts  llm.ts  loader.ts  loader_ui.ts  local_folder.ts  main.ts  mode.ts  nlquery.ts  permalink.ts  plot.ts  precomputed_info.ts  precomputed_mesh_loader.ts  precomputed_multilod_loader.ts  precomputed_sharded.ts  precomputed_volume_loader.ts  prompt_history.ts  python_session.ts  query_ui.ts  remote_analysis.ts  settings_ui.ts  skeleton_loader.ts  style.css  viewer.ts  welcome_ui.ts  workspace_ui.ts
web-app/src/workspace_api/: bridge.ts  handlers.ts  protocol.ts  session_state.ts  transport_http.ts  transport_ws.ts
web-app/tests/: workspace_smoke.mjs
