[project]
name = "tourguide-mcp"
version = "0.1.0"
description = "MCP adapter for the Tourguide Workspace API — drive a Tourguide visual session from any MCP-capable agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
]

[project.scripts]
tourguide-mcp = "tourguide_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tourguide_mcp"]
