[project]
name = "tourguide-mcp"
version = "0.1.0"
description = "MCP adapter for the Tourguide Workspace API — drive a Tourguide visual session from any MCP-capable agent."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    # In-process Neuroglancer viewer (spike: Python-NG viewer driven directly
    # by the MCP, instead of the bundled-JS viewer relayed through the bridge).
    "neuroglancer>=2.40",
]

[project.scripts]
tourguide-mcp = "tourguide_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tourguide_mcp"]
