[project]
name = "tourguide-client"
version = "0.1.0"
description = "Python SDK for the Tourguide Workspace API — drive a Tourguide visual session from a script or notebook."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tourguide_client"]
